GROOVY-8339: Fix warning "An illegal reflective access operation has occurred" (closes #905)